<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    tools:context="com.cgwx.yyfwptz.lixiang.leifeng0_2.view.activity.MainActivity">


    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_home"
            android:text="@string/tab_menu_home" />

        <RadioButton
            android:id="@+id/rb_detect"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_detect"
            android:text="@string/tab_menu_detect" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >
        </LinearLayout>

        <RadioButton
            android:id="@+id/rb_private"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_private"
            android:text="@string/tab_menu_private"/>

        <RadioButton
            android:id="@+id/rb_more"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_more"
            android:text="@string/tab_menu_more"/>

    </RadioGroup>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/rg_tab_bar"
        android:background="@color/div_white" />

    <FrameLayout
        android:id="@+id/ly_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar"
         />
    <ImageView
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/rg_tab_bar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/tab_menu_record_new"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_menu_record"
        android:textSize="12sp"
        android:color="@color/text_gray"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />




</RelativeLayout>
